objects/DM_Repayment_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>DM_Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Selection indicates that this record can be archived. This is automatically updated by the system. Do no update it manually.</inlineHelpText>
        <label>DM Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Principal Balance</description>
        <inlineHelpText>Principal Balance</inlineHelpText>
        <label>DM Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Barcode_Type__c</fullName>
        <label>DM Barcode Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM_Code128</fullName>
                </value>
                <value>
                    <fullName>DM_code39</fullName>
                </value>
                <value>
                    <fullName>DM_ean13</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Custom_Field_10__c</fullName>
        <label>DM Custom Field 7</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Custom_Field_1__c</fullName>
        <label>DM Custom Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Custom_Field_2__c</fullName>
        <label>DM Custom Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Date_Paid__c</fullName>
        <description>Date paid</description>
        <inlineHelpText>Date paid</inlineHelpText>
        <label>DM Date Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Due_Amount__c</fullName>
        <label>DM Due_Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Due_Date__c</fullName>
        <description>Due date</description>
        <inlineHelpText>The date on which the loan payment is due.</inlineHelpText>
        <label>DM Due Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Due_Fee1__c</fullName>
        <description>This field will represent the fee component of repayment schedules.</description>
        <inlineHelpText>This field will represent the fee component of repayment schedules.</inlineHelpText>
        <label>DM Due Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Due_Interest_On_Overdue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Due Interest On Overdue Amount</description>
        <inlineHelpText>Due Interest On Overdue Amount</inlineHelpText>
        <label>DM Due Interest On Overdue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Due_Interest__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Due Interest</description>
        <inlineHelpText>Due Interest</inlineHelpText>
        <label>DM Due Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Due_Principal__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Due Principal</description>
        <inlineHelpText>Due Principal</inlineHelpText>
        <label>DM Due Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>DM External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Id__c</fullName>
        <label>DM Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Installment_Snapshot__c</fullName>
        <label>DM Installment Snapshot</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Accrued_Not_Due__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Its the interest accrued on a daily basis, but not due until the due date.</description>
        <inlineHelpText>Its the interest accrued on a daily basis, but not due until the due date.</inlineHelpText>
        <label>DM Interest Accrued Not Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Rounding_Error__c</fullName>
        <description>This field captures interest rounding error in amortization schedules.</description>
        <inlineHelpText>This field captures interest rounding error in amortization schedules.</inlineHelpText>
        <label>DM Interest Rounding Error</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Is_Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a new repayment schedule for this loan account has been generated and this one is archived for reference.</description>
        <inlineHelpText>Indicates if a new repayment schedule for this loan account has been generated and this one is archived for reference.</inlineHelpText>
        <label>DM Is Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Is_Billed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Is Billed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Is_Fee_Posted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field represents whether the scheduled fee is added to charge.</description>
        <inlineHelpText>This field represents whether the scheduled fee is added to charge.</inlineHelpText>
        <label>DM Is Fee Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Is_Partially_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this scheduled installment is only partially paid.</description>
        <inlineHelpText>Indicates if this scheduled installment is only partially paid.</inlineHelpText>
        <label>DM Is Partially Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Is_Posted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System mark this field as checked when Regular IPT is created for this record in Flexible Amz Contracts.</description>
        <label>DM Is Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Loan_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DM Loan Account</label>
        <referenceTo>DM_Loan_Account__c</referenceTo>
        <relationshipLabel>DM Repayment Schedules</relationshipLabel>
        <relationshipName>DM_Repayment_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DM_Master_Archive_Object__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Selection indicates that this is a master object record containing one or more child object records. Master object records may be archived but are not deleted by the system. This is automatically updated by the system. Do not update it manually.</inlineHelpText>
        <label>DM Master Archive Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Paid_Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Paid Fees</description>
        <inlineHelpText>Paid Fees</inlineHelpText>
        <label>DM Paid Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Paid_Interest_On_Overdue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Paid Interest On Overdue Amount</description>
        <inlineHelpText>Paid Interest On Overdue Amount</inlineHelpText>
        <label>DM Paid Interest On Overdue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Paid_Interest__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Paid Interest</description>
        <inlineHelpText>Paid Interest</inlineHelpText>
        <label>DM Paid Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Paid_Principal__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Paid Principal</description>
        <inlineHelpText>Paid Principal</inlineHelpText>
        <label>DM Paid Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Past_Due_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Past Due Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Summary_Record_Id__c</fullName>
        <inlineHelpText>The ID of the summary transaction record within which this record is summarized. This is automatically generated by the system. Do no update it manually.</inlineHelpText>
        <label>DM Summary Record Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Selection indicates that the record is a summary transaction record for data archival purpose. This is automatically updated by the system. Do no update it manually.</inlineHelpText>
        <label>DM Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_TDS_Amount_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total TDS Paid</description>
        <label>DM TDS Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_TDS_Amount__c</fullName>
        <description>Total TDS Amount Due</description>
        <label>DM TDS Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Transaction_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This represents the amount paid by the borrower towards this repayment schedule.</description>
        <inlineHelpText>This represents the amount paid by the borrower towards this repayment schedule.</inlineHelpText>
        <label>DM Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Unpaid_Interest__c</fullName>
        <formula>DM_Due_Interest__c  -  DM_Paid_Interest__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DM Unpaid Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Unpaid_Overdue_Interest__c</fullName>
        <formula>DM_Due_Interest_On_Overdue__c - DM_Paid_Interest_On_Overdue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DM Unpaid Overdue Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Unpaid_Principal__c</fullName>
        <formula>DM_Due_Principal__c - DM_Paid_Principal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DM Unpaid Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Valid_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Valid Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Waived_Interest__c</fullName>
        <label>DM Waived Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_isPaid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the scheduled payment is/was completely paid</description>
        <inlineHelpText>Checked if the scheduled payment is/was completely paid</inlineHelpText>
        <label>DM Is Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_Status__c</fullName>
        <label>Migration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DM Amortization Schedule</label>
    <nameField>
        <label>Dm Repayment Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM Amortization Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>